@@ -4,12 +4,9 @@ import Modelo.*;
 import excepciones.SistemaVentaPasajesException;
 import utilidades.*;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
 import java.time.LocalDate;
 import java.time.LocalTime;
+import java.util.*;
 
 public class ControladorEmpresas {
     private static ControladorEmpresas instance;
@@ -18,6 +15,7 @@ public class ControladorEmpresas {
     private final ArrayList<Terminal> terminales;
     private final ArrayList<Bus> buses;
     private final ArrayList<Venta> ventas;
+
 
     private ControladorEmpresas() {
         this.empresas = new ArrayList<>();
@@ -69,14 +67,13 @@ public class ControladorEmpresas {
             throw new SistemaVentaPasajesException("Ya existe terminal con ese nombre");
         }
 
-        for (int i = 0; i < terminales.size(); i++) {
-            Terminal ter = terminales.get(i);
-
+        for (Terminal ter : terminales) {
             String comunaExistente = ter.getDireccion().getComuna();
             String comunaNueva = direccion.getComuna();
 
             if (comunaExistente.equals(comunaNueva)) {
                 throw new SistemaVentaPasajesException("Ya existe terminal en la comuna");
+
             }
         }
 
@@ -94,7 +91,7 @@ public class ControladorEmpresas {
 
         for (Bus b : empresa.getBuses()) {
             for (Viaje v : b.getViajes()) {
-                listaVentas.addAll(List.of(v.getVentas()));
+                listaVentas.addAll(Arrays.asList(v.getVentas()));
             }
         }
 
@@ -107,7 +104,7 @@ public class ControladorEmpresas {
             Venta venta = listaVentas.get(i);
             ventasEmpresas[i][0] = venta.getFecha().toString();
             ventasEmpresas[i][1] = venta.getTipo().toString();
-            ventasEmpresas[i][2] = String.valueOf(venta.getMonto());
+            ventasEmpresas[i][2] = String.valueOf(venta.getMontoPagado());
             ventasEmpresas[i][3] = venta.getPago().toString();
         }
         return ventasEmpresas;
@@ -124,8 +121,7 @@ public class ControladorEmpresas {
         Empresa empresa = empresatemp.get();
         Tripulante[] tripulantes = empresa.getTripulantes();
 
-        for (int i = 0; i < tripulantes.length; i++) {
-            Tripulante t = tripulantes[i];
+        for (Tripulante t : tripulantes) {
             if (t != null && t.getIdPersona().equals(id)) {
                 if (t instanceof Auxiliar) {
                     Auxiliar aux = (Auxiliar) t;
@@ -146,7 +142,7 @@ public class ControladorEmpresas {
         }
 
         Empresa EmpresaContratada = EmpresaBuscada.get();
-        boolean ContratacionExitosa = empresa.addConductor(Id, nombre, direccion);
+        boolean ContratacionExitosa = EmpresaContratada.addConductor(Id, nombre, direccion);
 
         if (!ContratacionExitosa) {
             throw new SistemaVentaPasajesException("El conductor con el id dado por la empresa ya se encuentra contratado.");
@@ -163,7 +159,7 @@ public class ControladorEmpresas {
         }
 
         Empresa EmpresaContratada = EmpresaBuscada.get();
-        boolean ContratacionExitosa = empresa.addAuxiliar(Id, nombre, direccion);
+        boolean ContratacionExitosa = EmpresaContratada.addAuxiliar(Id, nombre, direccion);
 
         if (!ContratacionExitosa) {
             throw new SistemaVentaPasajesException("El Auxiliar con el id dado por la empresa ya se encuentra contratado.");
@@ -172,7 +168,7 @@ public class ControladorEmpresas {
     }
 
     Optional<Conductor> findConductor(IdPersona Id, Rut RutEmp) {
-        Optional<Empresa> EmpresaOpcion = findEmpresa(rutEmpresa);
+        Optional<Empresa> EmpresaOpcion = findEmpresa(RutEmp);
 
         if (EmpresaOpcion.isEmpty()) {
             return Optional.empty();
@@ -185,7 +181,7 @@ public class ControladorEmpresas {
 
             if (tripulante != null) {
                 if (tripulante instanceof Conductor) {
-                    if (tripulante.getIdPersona().equals(IdConductor)) {
+                    if (tripulante.getIdPersona().equals(Id)) {
                         return Optional.of((Conductor) tripulante);
                     }
                 }
@@ -234,7 +230,6 @@ public class ControladorEmpresas {
 
         return Optional.empty();
     }
-
     public String[][] listEmpresas() {
 
         if (empresas.isEmpty()) {
@@ -254,7 +249,6 @@ public class ControladorEmpresas {
 
         return listaEmpresas;
     }
-
     public String[][] listLlegadasSalidasTerminal(String nombreTerminal, LocalDate fecha) {
 
         Optional<Terminal> terminalBuscado = findTerminal(nombreTerminal);
@@ -270,7 +264,6 @@ public class ControladorEmpresas {
         for (Bus bus : buses) {
 
             for (Viaje viaje : bus.getViajes()) {
-
                 if (viaje.getTerminalSalida().equals(terminal)
                         && viaje.getFecha().equals(fecha)) {
 
@@ -285,6 +278,7 @@ public class ControladorEmpresas {
                     listaViajes.add(fila);
                 }
 
+                // LLEGADAS :c
                 LocalTime horaLlegada = viaje.getHora().plusHours(viaje.getDuracion());
 
                 if (viaje.getTerminalLlegada().equals(terminal)
@@ -315,5 +309,6 @@ public class ControladorEmpresas {
 
         return resultado;
     }
+
 
 }
